# ice-api

./: README.md  pyproject.toml
src/ice_api/: __init__.py  lifecycle.py  version.py
src/ice_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ice_api/actions/: __init__.py  base.py  catalog.py
src/ice_api/agents/: __init__.py  catalog.py  spec.py
src/ice_api/domains/: __init__.py  code.py  knowledge.py  logs.py  system.py  ui.py  workflow.py  workspace.py
src/ice_api/ipc/: __init__.py  errors.py  events.py  messages.py
src/ice_api/schema/: __init__.py  jsonschema.py  validation.py
src/ice_api/types/: __init__.py  common.py  enums.py  identifiers.py  primitives.py
src/ice_api/ui/: actions.py  context.py  dispatcher.py
src/ice_api/utils/: introspection.py
